Change variable names

--- a/pom.xml
+++ b/pom.xml
@@ -54,7 +54,7 @@
         <version>2.2.0</version>
         <configuration>
           <!-- TODO: set project ID. -->
-          <deploy.projectId>ademiluyi-step-2020</deploy.projectId>
+          <deploy.projectId>smissak-step-2020</deploy.projectId>
           <deploy.version>1</deploy.version>
         </configuration>
       </plugin>
