--- a/pom.xml
+++ b/pom.xml
@@ -85,7 +85,7 @@
         <version>2.2.0</version>
         <configuration>
           <!-- TODO: set project ID. -->
-          <deploy.projectId>smissak-step-2020</deploy.projectId>
+          <deploy.projectId>ldchen-step-2020</deploy.projectId>
           <deploy.version>1</deploy.version>
         </configuration>
       </plugin>
