--- a/pom.xml
+++ b/pom.xml
@@ -53,7 +53,13 @@
      <groupId>com.google.api-client</groupId>
      <artifactId>google-api-client</artifactId>
      <version>1.30.9</version>
-   </dependency>
+    </dependency>
+
+    <dependency>
+      <groupId>com.google.api-client</groupId>
+      <artifactId>google-api-client-appengine</artifactId>
+      <version>1.30.10</version>
+    </dependency>
 
     <dependency>
       <groupId>com.google.appengine</groupId>
