--- a/pom.xml
+++ b/pom.xml
@@ -43,11 +43,11 @@
       <scope>test</scope>
     </dependency>
 
-    <dependency>
+    <!--<dependency>
       <groupId>org.mockito</groupId>
       <artifactId>mockito-core</artifactId>
       <version>3.4.0</version>
-    </dependency>
+    </dependency>-->
 
     <dependency>
      <groupId>com.google.api-client</groupId>
@@ -60,6 +60,24 @@
       <artifactId>google-api-client-appengine</artifactId>
       <version>1.30.10</version>
     </dependency>
+
+    <!-- https://mvnrepository.com/artifact/org.powermock/powermock-api-mockito2 -->
+    <dependency>
+      <groupId>org.powermock</groupId>
+      <artifactId>powermock-api-mockito2</artifactId>
+      <version>2.0.7</version>
+      <scope>test</scope>
+    </dependency>
+
+
+    <!-- https://mvnrepository.com/artifact/org.powermock/powermock-module-junit4 -->
+    <dependency>
+      <groupId>org.powermock</groupId>
+      <artifactId>powermock-module-junit4</artifactId>
+      <version>2.0.7</version>
+      <scope>test</scope>
+    </dependency>
+
 
     <dependency>
       <groupId>com.google.appengine</groupId>
